...
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".activities.DialogExampleActivity">

    <Button
        android:id="@+id/confirm_dialog_button"
        android:layout_width="260dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ripple_fb"
        android:textColor="@color/Lemon"
        android:textSize="14sp"
        android:text="@string/show_confirm_dialog"/>

    <TextView
        android:id="@+id/status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_centerInParent="true"
        tools:text="Status" />

...
